fixed overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+  overflow: hidden;
   width: 100%;
   height: 100%;
   background: url("images/bg1.jpg") no-repeat center fixed;
